# mcp-servers

auth/: README.md  package.json
auth/src/: index.ts
docebo-mcp-server/: README.md  package.json
docebo-mcp-server/src/client/: simpleStreamableHttpClient.ts
docebo-mcp-server/src/server/: hono-index.ts  hono-server.ts
docebo-mcp-server/src/server/tools/: classrooms.ts  courses.ts  index.ts
files/: .env.example  .gitignore  Dockerfile  README.md  README_MCP.md  docker-compose.yml  package.json  pyproject.toml  run.py
files-remote/: README.md  package.json
files-remote/src/: index.ts  simple-client.ts
files/src/: index.ts  main.py  mcp_server.py  mcp_server_auth.py
files/src/api/: auth.py  files.py  router.py
files/src/middleware/: auth_middleware.py
files/src/models/: file.py
files/src/remote/: index.ts
files/src/services/: api_client.py  auth_service.py  config.py  file_service.py
files/tests/: test_api.py  test_list_files.py
files/tools/: get_token.py  mcp_client.py
files_py/: README.md  pyproject.toml
files_py/tools/: mcp_client.py
mcp-streamableHttp/: README.md  package.json  tsconfig.json  vitest.config.ts
mcp-streamableHttp/__tests__/: server.test.ts
mcp-streamableHttp/src/: client.ts  express-server.ts  hono-index.ts  hono-server.ts  index.ts  server.ts  simpleStreamableHttpClient.ts
mcp-streamableHttp/src/client/: simpleStreamableHttpClient.ts
mcp-streamableHttp/src/parser/: index.ts  openapi-transformer.ts
mcp-streamableHttp/src/parser/utils/: code-generator.ts
mcp-streamableHttp/src/server/: auth.ts  dynamicToolLoader.ts  express-server.ts  hono-index.ts  hono-server.ts
mcp-streamableHttp/src/tools/: currencies.ts  files.ts  index.ts
